# jnkn

./: .gitignore  404.html  Dockerfile  README.md  all_repos.txt  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: jnkn_check.yml  junkan-analysis.yml
about/: index.html
changelog/: index.html
changelog/CHANGELOG/: index.html
cicd_date/design/: index.html
community/: index.html
community/code-of-conduct/: index.html
community/contributing/: index.html
community/development-setup/: index.html
community/release-process/: index.html
community/roadmap/: index.html
community/testing-guide/: index.html
docs/: ARCHITECTURE.md  index.md
docs/changelog/: index.md
docs/community/: development-setup.md
docs/getting-started/: first-ci-integration.md  installation.md  quickstart.md
docs/openlineage/: design.md
explanation/: index.html
getting-started/: index.html
getting-started/example-repository/: index.html
getting-started/first-ci-integration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
how-to/: index.html
legal/license/: index.html
legal/security-policy/: index.html
legal/third-party-licenses/: index.html
openlineage/design/: index.html
reference/: index.html
reference/cli/: index.html
scripts/: concat.py  demo_cicd_gate.py  demo_cli.py  demo_git_diff.py  demo_openlineage.py  demo_pyspark_column_lineage.py  verify_e2e.sh  verify_epic2.sh  verify_parsers.py
search/: search_index.json
site/: 404.html  index.html
tutorials/: index.html
(+309 files in other folders)
