[project]
name = "junkan"
version = "0.3.0"
description = "CI/CD Gatekeeper for Infrastructure and Data Impact Analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "networkx>=3.2.1",
    "sqlglot>=20.0.0",
    "tree-sitter==0.21.3",
    "tree-sitter-languages>=1.10.2",
    "pydantic>=2.5.0",
    "httpx>=0.27.0",
    "xxhash>=3.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[project.scripts]
junkan = "junkan.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=junkan"
